# xdr-gtk

./: .gitignore
icons/: icons.xml
src/: CMakeLists.txt  audio_bridge.c  audio_bridge.h  audio_bridge_debug.c  audio_bridge_debug.h  audio_stream.c  audio_stream.h  conf-defaults.h  conf.c  conf.h  fonts.c  fonts.h  icon.rc  main.c  scan.c  scheduler.c  settings.c  settings.h  tuner-callbacks.c  tuner-conn.c  tuner-conn.h  tuner.c  tuner.h  ui-connect.c  ui-input.c  ui-tuner-set.c  ui-tuner-update.c  ui-tuner-update.h  ui.c
